force-app/main/default/objects/AC_Service_Appointment__c/AC_Service_Appointment__c.object-meta.xml
<CustomObject>
    <label>AC Service Appointment</label>
    <nameField>
        <displayFormat>SA-{0000000}</displayFormat>
        <label>Service Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>