force-app/main/default/objects/AC_Service_Appointment__c/fields/Actual_Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Duration_minutes__c</fullName>
    <label>Actual Duration (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>