force-app/main/default/objects/AC_Service_Appointment__c/fields/Actual_End__c.field-meta.xml
<CustomField>
    <fullName>Actual_End__c</fullName>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>