force-app/main/default/objects/AC_Service_Appointment__c/fields/Estimated_Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_minutes__c</fullName>
    <label>Estimated Duration (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>