force-app/main/default/objects/AC_Service_Appointment__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Address</label>
    <length>140</length>
    <type>Text</type>
</CustomField>